--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@angular/core": "^18.0.6",
     "@angular/forms": "^18.0.6",
     "@angular/google-maps": "^18.0.6",
+    "@angular/material": "^19.2.1",
     "@angular/platform-browser": "^18.0.6",
     "@angular/platform-browser-dynamic": "^18.0.6",
     "@angular/router": "^18.2.13",
     "@asymmetrik/ngx-leaflet": "^18.0.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@types/leaflet": "^1.9.8",
     "angular-calendar": "^0.31.0",
     "angularx-flatpickr": "^7.3.0",
