--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular-devkit/build-angular": "^18.0.7",
     "@angular/cli": "^18.0.7",
     "@angular/compiler-cli": "^18.0.6",
+    "@types/bootstrap": "^5.2.10",
     "@types/feather-icons": "^4.29.4",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
