--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js",
-              "@angular/localize/init"
+              "@angular/localize/init",
+              "src/window-global-fix.ts"
             ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
