--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "feather-icons": "^4.29.1",
     "ng-apexcharts": "^1.8.0",
     "ngx-owl-carousel-o": "^18.0.0",
+    "net": "^1.0.2",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -41,6 +45,8 @@
     "@angular/compiler-cli": "^18.0.6",
     "@types/feather-icons": "^4.29.4",
     "@types/jasmine": "~5.1.0",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
