--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/core": "^18.0.6",
     "@angular/forms": "^18.0.6",
     "@angular/google-maps": "^18.0.6",
+    "@angular/localize": "^19.2.9",
     "@angular/material": "^19.2.1",
     "@angular/platform-browser": "^18.0.6",
     "@angular/platform-browser-dynamic": "^18.0.6",
@@ -23,13 +24,17 @@
     "@asymmetrik/ngx-leaflet": "^18.0.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
-    "@types/leaflet": "^1.9.8",
+    "@types/leaflet": "^1.9.17",
     "angular-calendar": "^0.31.0",
     "angularx-flatpickr": "^7.3.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "date-fns": "^3.2.0",
     "feather-icons": "^4.29.1",
+    "flatpickr": "^4.6.13",
+    "leaflet": "^1.9.4",
     "ng-apexcharts": "^1.8.0",
+    "ng2-charts": "^4.0.1",
     "ngx-owl-carousel-o": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
