--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@types/leaflet": "^1.9.17",
     "angular-calendar": "^0.31.0",
     "angularx-flatpickr": "^7.3.0",
+    "apexcharts": "^4.7.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "date-fns": "^3.2.0",
     "feather-icons": "^4.29.1",
     "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
-    "ng-apexcharts": "^1.8.0",
+    "ng-apexcharts": "^1.15.0",
     "ng2-charts": "^4.0.1",
     "ngx-owl-carousel-o": "^18.0.0",
     "rxjs": "~7.8.0",
