Advanced features for Ressource

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.6",
+    "@angular/animations": "^18.2.13",
     "@angular/common": "^18.0.6",
     "@angular/compiler": "^18.0.6",
     "@angular/core": "^18.0.6",
@@ -29,6 +29,7 @@
     "@zxing/ngx-scanner": "^19.0.0",
     "angular-calendar": "^0.31.0",
     "angularx-flatpickr": "^7.3.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.9",
     "date-fns": "^3.2.0",
@@ -37,6 +38,7 @@
     "ng-apexcharts": "^1.8.0",
     "ng2-charts": "^8.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "webcam-easy": "^1.1.1",
