--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@types/moment": "^2.13.0",
     "angular-calendar": "^0.31.0",
     "angularx-flatpickr": "^7.3.0",
+    "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.9",
     "date-fns": "^3.2.0",
     "feather-icons": "^4.29.1",
     "moment": "^2.30.1",
-    "ng-apexcharts": "^1.8.0",
+    "ng-apexcharts": "^1.15.0",
+    "ng2-charts": "^8.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
